--- a/iSmartHome/ViewControllers/SofaHeatView.xib
+++ b/iSmartHome/ViewControllers/SofaHeatView.xib
@@ -23,46 +23,9 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="background_circles-2.png" translatesAutoresizingMaskIntoConstraints="NO" id="icF-vP-TVj">
-                    <rect key="frame" x="0.0" y="60" width="414" height="600"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="600" id="mqh-Du-8iY"/>
-                    </constraints>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background_circles-2.png" translatesAutoresizingMaskIntoConstraints="NO" id="icF-vP-TVj">
+                    <rect key="frame" x="0.0" y="63" width="414" height="650"/>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="background_big_circle.png" translatesAutoresizingMaskIntoConstraints="NO" id="ITP-mX-Xdy">
-                    <rect key="frame" x="57" y="210" width="300" height="300"/>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tRM-RC-KHu">
-                    <rect key="frame" x="137" y="280" width="110" height="48"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="48" id="0vu-72-bJB"/>
-                        <constraint firstAttribute="width" constant="110" id="Hyu-Om-LHA"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="43"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_temp_signal_1.png" translatesAutoresizingMaskIntoConstraints="NO" id="M4u-zg-vDX">
-                    <rect key="frame" x="157" y="353" width="100" height="100"/>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ºC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fHl-66-IQz">
-                    <rect key="frame" x="255" y="302" width="20" height="20.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BBM-JK-nIm">
-                    <rect key="frame" x="167" y="497" width="80" height="80"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="80" id="952-wN-knZ"/>
-                        <constraint firstAttribute="height" constant="80" id="SFP-bQ-vaF"/>
-                    </constraints>
-                    <state key="normal" image="button_minus.png"/>
-                    <connections>
-                        <action selector="s6Down:" destination="-1" eventType="touchDown" id="AlJ-WD-LUQ"/>
-                        <action selector="s6Up:" destination="-1" eventType="touchUpInside" id="R57-Q9-IXO"/>
-                    </connections>
-                </button>
                 <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B03-g1-8ZN">
                     <rect key="frame" x="184" y="676" width="46" height="30"/>
                     <constraints>
@@ -81,43 +44,74 @@
                         <action selector="s3ORs4Up:" destination="-1" eventType="touchUpInside" id="lUR-2S-6Pl"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M5p-hy-biF">
+                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M5p-hy-biF">
                     <rect key="frame" x="167" y="140" width="80" height="80"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="80" id="bJ1-sE-A1e"/>
-                        <constraint firstAttribute="height" constant="80" id="xrS-JD-4B6"/>
-                    </constraints>
                     <state key="normal" image="button_plus.png"/>
                     <connections>
                         <action selector="s5Down:" destination="-1" eventType="touchDown" id="Js0-an-bZh"/>
                         <action selector="s5Up:" destination="-1" eventType="touchUpInside" id="qgB-jC-Phd"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BBM-JK-nIm">
+                    <rect key="frame" x="167" y="497" width="80" height="80"/>
+                    <state key="normal" image="button_minus.png"/>
+                    <connections>
+                        <action selector="s6Down:" destination="-1" eventType="touchDown" id="AlJ-WD-LUQ"/>
+                        <action selector="s6Up:" destination="-1" eventType="touchUpInside" id="R57-Q9-IXO"/>
+                    </connections>
+                </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background_big_circle.png" translatesAutoresizingMaskIntoConstraints="NO" id="ITP-mX-Xdy">
+                    <rect key="frame" x="57" y="238" width="300" height="300"/>
+                    <constraints>
+                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="300" id="30w-eC-ZaK"/>
+                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="300" id="RKy-RV-eke"/>
+                    </constraints>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_temp_signal_1.png" translatesAutoresizingMaskIntoConstraints="NO" id="M4u-zg-vDX">
+                    <rect key="frame" x="157" y="368" width="100" height="100"/>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tRM-RC-KHu">
+                    <rect key="frame" x="137" y="321" width="120" height="45"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="45" id="TjR-IP-hWn"/>
+                        <constraint firstAttribute="width" constant="120" id="ZH6-in-DPR"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="48"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ºC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fHl-66-IQz">
+                    <rect key="frame" x="265" y="345" width="20" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="Qtk-Ch-fX3"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="BBM-JK-nIm" firstAttribute="centerX" secondItem="ITP-mX-Xdy" secondAttribute="centerX" id="10k-to-RK1"/>
+                <constraint firstItem="M4u-zg-vDX" firstAttribute="centerY" secondItem="ITP-mX-Xdy" secondAttribute="centerY" constant="30" id="4Rm-XN-4l5"/>
                 <constraint firstItem="M4u-zg-vDX" firstAttribute="top" secondItem="tRM-RC-KHu" secondAttribute="bottom" constant="19" id="4za-aT-eWO"/>
-                <constraint firstItem="tRM-RC-KHu" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="137" id="5TP-rx-BX8"/>
-                <constraint firstItem="fHl-66-IQz" firstAttribute="leading" secondItem="tRM-RC-KHu" secondAttribute="trailing" constant="8" id="7kD-W7-37f"/>
-                <constraint firstItem="M4u-zg-vDX" firstAttribute="top" secondItem="tRM-RC-KHu" secondAttribute="bottom" constant="25" id="QmL-8g-dId"/>
-                <constraint firstItem="fHl-66-IQz" firstAttribute="top" secondItem="tRM-RC-KHu" secondAttribute="bottom" constant="-26" id="U27-2w-OCM"/>
-                <constraint firstItem="tRM-RC-KHu" firstAttribute="top" secondItem="M5p-hy-biF" secondAttribute="bottom" constant="60" id="VCa-tk-ook"/>
-                <constraint firstItem="BBM-JK-nIm" firstAttribute="top" secondItem="ITP-mX-Xdy" secondAttribute="bottom" constant="-13" id="d5a-TX-qIj"/>
-                <constraint firstItem="M5p-hy-biF" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="dHZ-6Y-tGV"/>
-                <constraint firstItem="BBM-JK-nIm" firstAttribute="top" secondItem="M4u-zg-vDX" secondAttribute="bottom" constant="44" id="dWz-NF-suT"/>
-                <constraint firstItem="tRM-RC-KHu" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="280" id="dgk-Ru-Ssj"/>
-                <constraint firstItem="icF-vP-TVj" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="esM-qS-Z29"/>
-                <constraint firstItem="M4u-zg-vDX" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="jOl-Vz-OSK"/>
-                <constraint firstItem="BBM-JK-nIm" firstAttribute="top" secondItem="M5p-hy-biF" secondAttribute="bottom" constant="267" id="mY1-xY-hSL"/>
-                <constraint firstItem="BBM-JK-nIm" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="ppU-gD-1g3"/>
+                <constraint firstItem="tRM-RC-KHu" firstAttribute="centerX" secondItem="ITP-mX-Xdy" secondAttribute="centerX" constant="-10" id="HYn-0F-Xan"/>
+                <constraint firstItem="icF-vP-TVj" firstAttribute="centerX" secondItem="ITP-mX-Xdy" secondAttribute="centerX" id="Mkt-0e-Uqv"/>
+                <constraint firstItem="fHl-66-IQz" firstAttribute="leading" secondItem="tRM-RC-KHu" secondAttribute="trailing" constant="8" symbolic="YES" id="Rg4-ZM-cD9"/>
+                <constraint firstItem="M4u-zg-vDX" firstAttribute="centerX" secondItem="ITP-mX-Xdy" secondAttribute="centerX" id="Vqi-Z9-56w"/>
+                <constraint firstItem="fHl-66-IQz" firstAttribute="bottom" secondItem="tRM-RC-KHu" secondAttribute="bottom" id="XAL-pG-7wJ"/>
+                <constraint firstItem="ITP-mX-Xdy" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="aIW-Kf-OcK"/>
+                <constraint firstItem="ITP-mX-Xdy" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="20" id="h0j-ck-YJ1"/>
+                <constraint firstItem="icF-vP-TVj" firstAttribute="centerY" secondItem="ITP-mX-Xdy" secondAttribute="centerY" id="ifR-hU-OtL"/>
+                <constraint firstAttribute="trailing" secondItem="icF-vP-TVj" secondAttribute="trailing" id="pbL-bB-y65"/>
+                <constraint firstItem="M5p-hy-biF" firstAttribute="centerX" secondItem="ITP-mX-Xdy" secondAttribute="centerX" id="q2b-y3-dgg"/>
+                <constraint firstItem="tRM-RC-KHu" firstAttribute="centerY" secondItem="ITP-mX-Xdy" secondAttribute="centerY" constant="-45" id="r97-2G-IdS"/>
+                <constraint firstItem="icF-vP-TVj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="uKM-xP-Zqd"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
             <variation key="default">
                 <mask key="constraints">
-                    <exclude reference="esM-qS-Z29"/>
                     <exclude reference="4za-aT-eWO"/>
-                    <exclude reference="d5a-TX-qIj"/>
-                    <exclude reference="mY1-xY-hSL"/>
                 </mask>
             </variation>
         </view>
