--- a/iSmartHome/Base.lproj/Main.storyboard
+++ b/iSmartHome/Base.lproj/Main.storyboard
@@ -233,11 +233,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="点击中间“＋”增加用户" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hM0-dj-iDq">
+                                <rect key="frame" x="117" y="86" width="180" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="KCL-1j-1rB"/>
+                                    <constraint firstAttribute="width" constant="180" id="sVC-gM-Vjr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background_circles.png" translatesAutoresizingMaskIntoConstraints="NO" id="esm-Dx-m9h">
-                                <rect key="frame" x="0.0" y="68" width="414" height="600"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="600"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ukf-S2-h2b">
-                                <rect key="frame" x="172" y="333" width="70" height="70"/>
+                                <rect key="frame" x="172" y="353" width="70" height="70"/>
                                 <color key="backgroundColor" red="0.5525138650804724" green="0.77478983736028884" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="70" id="9bb-sg-rX4"/>
@@ -258,40 +268,17 @@
                                     <segue destination="0y1-DJ-0hx" kind="push" id="S0k-Sq-JVi"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="点击中间“＋”增加用户" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hM0-dj-iDq">
-                                <rect key="frame" x="117" y="86" width="180" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="KCL-1j-1rB"/>
-                                    <constraint firstAttribute="width" constant="180" id="sVC-gM-Vjr"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="esm-Dx-m9h" secondAttribute="trailing" id="8V7-BX-ukv"/>
                             <constraint firstItem="hM0-dj-iDq" firstAttribute="centerX" secondItem="dSM-Gv-kVT" secondAttribute="centerX" id="CYm-rh-ZR6"/>
                             <constraint firstItem="esm-Dx-m9h" firstAttribute="leading" secondItem="dSM-Gv-kVT" secondAttribute="leading" id="DUw-ZC-brx"/>
-                            <constraint firstItem="ukf-S2-h2b" firstAttribute="centerY" secondItem="dSM-Gv-kVT" secondAttribute="centerY" id="Hib-1j-XqY"/>
-                            <constraint firstItem="esm-Dx-m9h" firstAttribute="leading" secondItem="dSM-Gv-kVT" secondAttribute="leading" id="IAH-Nm-HSW"/>
-                            <constraint firstItem="esm-Dx-m9h" firstAttribute="centerY" secondItem="ukf-S2-h2b" secondAttribute="centerY" id="MSl-yY-cA1"/>
+                            <constraint firstItem="ukf-S2-h2b" firstAttribute="centerY" secondItem="dSM-Gv-kVT" secondAttribute="centerY" constant="20" id="Hib-1j-XqY"/>
                             <constraint firstItem="ukf-S2-h2b" firstAttribute="centerY" secondItem="esm-Dx-m9h" secondAttribute="centerY" id="QWG-fH-gcO"/>
                             <constraint firstItem="esm-Dx-m9h" firstAttribute="centerX" secondItem="ukf-S2-h2b" secondAttribute="centerX" id="Vkd-WF-A0B"/>
-                            <constraint firstItem="esm-Dx-m9h" firstAttribute="top" secondItem="Sg9-ex-uFL" secondAttribute="bottom" id="aSR-Bf-Vka"/>
-                            <constraint firstItem="ukf-S2-h2b" firstAttribute="centerY" secondItem="dSM-Gv-kVT" secondAttribute="centerY" id="aXB-Gt-3n9"/>
-                            <constraint firstItem="esm-Dx-m9h" firstAttribute="centerX" secondItem="ukf-S2-h2b" secondAttribute="centerX" id="dcU-ex-e9J"/>
                             <constraint firstItem="hM0-dj-iDq" firstAttribute="top" secondItem="Sg9-ex-uFL" secondAttribute="bottom" constant="22" id="kqU-OE-qnM"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="MSl-yY-cA1"/>
-                                <exclude reference="aSR-Bf-Vka"/>
-                                <exclude reference="dcU-ex-e9J"/>
-                                <exclude reference="aXB-Gt-3n9"/>
-                            </mask>
-                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="8FH-CP-Ccc">
                         <nil key="title"/>
